# bedrock

./: .gitignore  bedrock_commands.sh  email_ingestion.md  flowchart TD.mmd  pyproject.toml
guide_scripts/: generate_text_response_converse.py  invoke_titan_text_express.py  list_foundation_models.py  meeting_transcript.py  prompt_management_flow.py  tool_call.py
notebooks/: advanced_rag-v2.ipynb  bedrock_guide.ipynb
reports/: serverless.html  serverless.md
