[project]
name = "bedrock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3[crt]>=1.37.37",
    "dspy",
    "dspy-ai>=2.6.18",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.0",
    "ruff>=0.11.6",
]

[tool.uv.sources]
dspy = { git = "https://github.com/stanfordnlp/dspy.git" }
